updated chores and movies

--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,10 @@
 .choresText {
-   color: black;
+   color: green;
+   list-style-position: inside;
+   font-style: italic;
 }
 
 .choresHeading {
-   color: black;
+   color: green;
+   text-decoration: underline;
 }
